--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <div class="page">
 
   <header>
-    <h1 class="landing-title">Hello, world!</h1>
+    <h1 class="landing-title">From Navier-Stokes to Markov Chains, a blog about who know's what</h1>
   </header>
 
   <div class="text-center">
