test landing page

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@ title: Home
       <i class="fa fa-code-fork fa-3x"></i>
     </p>
 
-    <p>
-      This is your landing page. It is the first page your users will see when
-      they visit your website. Perhaps write a little bit about you or your
-      website here.
-    </p>
+<h1 class="landing-articles"> Last articles...</h1>`
+
+<h1 class="last-articles"> Test article</h1>
+
+
+<h1 class="landing-projects"> Current projects...</h1>
+
 
   </div>
 
