--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@ title: Home
     <p>
       <i class="fa fa-code-fork fa-3x"></i>
     </p>
+  </div>
 
-<h1 class="landing-articles"> Last articles...</h1>`
+<h1 class="landing-articles">Last articles</h1>`
 
 <h1 class="last-articles"> <a href="https://github.com/nicoelayda/celeste">GitHub</a> Celeste is a lightweight Jekyll theme that features a minimalist, content-first design. It places your content center stage and lets your readers view them in a clutter-free environment without visual distractions. It is based on , the Jekyll butler, by . </h1>
 
-<h1 class="landing-projects"> Current projects...</h1>
+<h1 class="landing-projects">Current projects</h1>
 
 
-  </div>
+
 
 </div>
