--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ title: Home
 
 <h1 class="landing-articles">Last articles</h1>`
 
-<h1 class="last-articles"> <a href="https://github.com/nicoelayda/celeste">GitHub</a> Celeste is a lightweight Jekyll theme that features a minimalist, content-first design. It places your content center stage and lets your readers view them in a clutter-free environment without visual distractions. It is based on , the Jekyll butler, by . </h1>
+<h1 class="last-articles"> <a href="https://github.com/nicoelayda/celeste">GitHub Celeste fdznazl </a> </h1>
+
+<p> Celeste is a lightweight Jekyll theme that features a minimalist, content-first design. It places your content center stage and lets your readers view them in a clutter-free environment without visual distractions. It is based on , the Jekyll butler, by . </p>
 
 <h1 class="landing-projects">Current projects</h1>
 
