--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@ title: Home
 
 <h1 class="landing-projects">Current projects</h1>
 
+<ul style="list-style-type:square;">
+  <li>An open-source library melting fluid mechanics and deep reinforcement learning</li>
+  <li>An application of deep reinforcement learning to supply chain</li>
+  <li>...</li>
+</ul>
+
 
 
 
