test draft and posts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
     </p>
   </div>
 
-<h1 class="landing-articles">Last articles</h1>`
+<h1 class="landing-articles">Last articles</h1>
 
 <b> <a href="https://github.com/nicoelayda/celeste">GitHub Celeste fdznazl </a> </b>
 
