--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
 <div class="page">
 
   <header>
-    <h1 class="landing-title">From Navier-Stokes to Markov Chains, a blog about who know's what</h1>
+    <h1 class="landing-title">From Navier-Stokes to Markov Chains, a blog about who knows what</h1>
   </header>
 
   <div class="text-center">
@@ -42,5 +42,5 @@ title: Home
   <li>An open-source library melting fluid mechanics and deep reinforcement learning</li>
   <li>An application of deep reinforcement learning to supply chain</li>
   <li>...</li>
-</ul>
+</ul>g
 </div>
