--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Home
 
 <ul style="list-style-type:square;">
   <li>An open-source library melting fluid mechanics and deep reinforcement learning</li>
-  <li>An application of deep reinforcement learning to supply chain</li>
+  <li>Twitch & live AI?</li>
   <li>...</li>
 </ul>
 </div>
