Add liverpool post

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ One Raspberry Pi, some Lego and a bunch of Deep Learning? Challenge accepted.
 <ul style="list-style-type:square;">
   <li>An open-source library melting fluid mechanics and deep reinforcement learning</li>
   <li>Twitch & live AI?</li>
+  <li>In house cloud computing</li>
+  <li>Sports & AI: review and projects</li>
   <li>...</li>
 </ul>
 </div>
