--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@ title: Home
 
 <div class="page">
 
-  <header>
-    <h1 class="landing-title">Paul Garnier</h1>
-  </header>
+<header>
+  <h1 class="landing-title">Paul Garnier</h1>
+</header>
 
 <p>
   <ul>
     <li><p><b>2024 -</b> Back at <a href="https://www.cemef.mines-paristech.fr/">CEMEF</a> to start a PhD.</p></li>
-    <li><p><b>2020/21 - 2024</b> Flaneer: built a startup providing computer in the cloud for the creative industry (as the CTO). We raised $1.4M, grew to team to 8 people and served up to 10k users daily.</p></li>
-    <li><p><b>2019-2021</b> MCs at MINES Paristech. I spent some time doing internships with Amazon in 2019 in SF working on the first deep learning models for Learning to Rank, Artefact in China, and CNRS. Spent my last year at MINES Paristech mostly working on a startup project: Flaneer.</p></li>
-    <li><p><b>2017 - 2019</b> BSc at MINES Paristech, where I started working on Deep Reinforcement Learning. Worked with <a href="https://www.minesparis.psl.eu/Services/Annuaire/elie-hachem"> Elie Hachem</a> to apply DRL to Fluid Mechanics.</p></li>
+    <li><p><b>2020/21 - 2024</b> <a href="https://www.flaneer.com/">Flaneer</a>: built a startup providing computer in the cloud for the creative industry (as the CTO). We raised $1.4M, grew to team to 8 people and served up to 10k users daily.</p></li>
+    <li><p><b>2019-2021</b> MCs at <a href="https://www.minesparis.psl.eu/">MINES Paristech</a>. I spent some time doing internships with Amazon (<a href="https://fr.wikipedia.org/wiki/A9_(site_web)">formerly the A9 team</a>) in 2019 in SF working on the first deep learning models for Learning to Rank, <a href="https://www.artefact.com/">Artefact</a> in China, CNRS and Microsoft. Spent my last year at MINES Paristech mostly working on a startup project: Flaneer.</p></li>
+    <li><p><b>2017 - 2019</b> BSc at <a href="https://www.minesparis.psl.eu/">MINES Paristech</a>, where I started working on Deep Reinforcement Learning. Worked with <a href="https://www.minesparis.psl.eu/Services/Annuaire/elie-hachem"> Elie Hachem</a> to apply DRL to Fluid Mechanics.</p></li>
     <li><p><b>2015 - 2017</b> Prep. school at Ginette, doing mostly math and physics.</p></li>
   </ul>
 </p>
